--- a/greeting-cd-pipeline/Jenkinsfile
+++ b/greeting-cd-pipeline/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
             steps {
                 sh '''
                     oc start-build greeting-metrics \
-                    --follow --wait -n vnzvzx-metrics
+                    --follow --wait -n rjgyok-metrics
                 '''
             }
         }
